--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,10 @@
-/*place global styles here */
+@font-face {
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Bebas Neue'), url('/fonts/BebasNueue/Regular.woff2') format('woff2');
+}
+
 html,
 body {
     @apply h-full;
