refactor: move fonts to `$lib/fonts`

--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
     font-family: 'Bebas Neue';
     font-style: normal;
     font-weight: 400;
-    src: local('Bebas Neue'), url('/fonts/BebasNueue/Regular.woff2') format('woff2');
+    src: local('Bebas Neue'), url('$lib/fonts/BebasNeue/Regular.woff2') format('woff2');
 }
 
 html,
