--- a/src/routes/theme.css
+++ b/src/routes/theme.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Bebas Neue'), url('$lib/fonts/BebasNeue/Regular.woff2') format('woff2');
+}
+
 :root {
     /* =~= Theme Properties =~= */
     --theme-font-family-base: 'Bebas Neue', system-ui;
